--- a/WPTimeTracking/WPTimeTracking.csproj
+++ b/WPTimeTracking/WPTimeTracking.csproj
@@ -48,6 +48,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="TiempoIniciar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TiempoIniciar.Designer.cs">
+      <DependentUpon>TiempoIniciar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tiempos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tiempos.Designer.cs">
+      <DependentUpon>Tiempos.cs</DependentUpon>
+    </Compile>
     <Compile Include="TareaEditar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +149,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TiempoIniciar.resx">
+      <DependentUpon>TiempoIniciar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tiempos.resx">
+      <DependentUpon>Tiempos.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
